--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
-main{
-    background-image: image();
+body{
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal; 
+    margin: 0;  
+}
+h1{
+    font-size: 50px;
+}
+.name{
+    color: darkorange;
+}
+section{
+    display: flex;
+
+}
+.half-width{
+    width: 50%;
+    padding-left: 5%;
+}
+.half-width img{
+    width: 70%;
+}
+.anchor-button{
+    text-decoration: none;
+    background-color: rgb(238, 53, 53);
+    padding: 10px 40px;
+    border-radius: 10px;
+    color: aliceblue;
+    font-weight: 700;
+}
+#top-banner{
+    background-image: url(bg3.jpg);
+    
 }
